[tool.poetry]
name = "cytheron"
version = "0.1.0"
description = ""
authors = ["johnvictorfs", "guilherme-vasconcelos"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.1"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.1"
mypy = "^0.770"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
cytheron = 'cytheron.cli:main'
